// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders correctly 1`] = `
.emotion-0 {
  font: var(--echoes-typography-others-label);
  color: var(--echoes-color-text-default);
}

<div>
  <label
    class="emotion-0 emotion-1"
  >
    The label text
  </label>
  <div
    class="echoes-modal-portal"
  />
  <section
    aria-atomic="false"
    aria-label="Focus toasts messages with alt+T"
    aria-live="polite"
    aria-relevant="additions text"
    tabindex="-1"
  />
</div>
`;

exports[`renders correctly with isSubtle 1`] = `
.emotion-0 {
  font: var(--echoes-typography-others-label);
  color: var(--echoes-color-text-subtle);
}

<div>
  <label
    class="emotion-0 emotion-1"
  />
  <div
    class="echoes-modal-portal"
  />
  <section
    aria-atomic="false"
    aria-label="Focus toasts messages with alt+T"
    aria-live="polite"
    aria-relevant="additions text"
    tabindex="-1"
  />
</div>
`;
